--- a/package.json
+++ b/package.json
@@ -51,12 +51,11 @@
     "@dbp-toolkit/language-select": "^0.2.0",
     "@dbp-toolkit/notification": "^0.2.0",
     "@dbp-toolkit/person-profile": "^0.2.0",
-    "@open-wc/scoped-elements": "^1.3.3",
+    "@open-wc/scoped-elements": "^2.0.0",
+    "credential-handler-polyfill": "^2.1.0",
     "i18next": "^21.0.0",
-    "lit-element": "^2.3.1",
-    "lit-html": "^1.2.1",
-    "mockdate": "^3.0.5",
-    "credential-handler-polyfill": "^2.1.0"
+    "lit": "^2.1.0",
+    "mockdate": "^3.0.5"
   },
   "scripts": {
     "build": "rollup -c",
