--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,12 +1,8 @@
 {
-  "extends": [
-    "config:base",
-    "group:allNonMajor",
-    "schedule:weekly"
-  ],
-  "ignorePresets": [":prHourlyLimit2"],
-  "rangeStrategy": "update-lockfile",
-  "composer": {
-    "enabled": false
-  }
+    "extends": ["config:base", "group:allNonMajor", "schedule:weekly"],
+    "ignorePresets": [":prHourlyLimit2"],
+    "rangeStrategy": "update-lockfile",
+    "composer": {
+        "enabled": false
+    }
 }
