--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,7 @@
     "tabWidth": 4,
     "printWidth": 100,
     "bracketSameLine": true,
+    "htmlWhitespaceSensitivity": "ignore",
     "overrides": [
         {
             "files": "*.js",
