--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "karma-mocha": "^2.0.1",
         "karma-source-map-support": "^1.4.0",
         "mocha": "^9.0.0",
+        "playwright-core": "^1.21.0",
         "prettier": "^2.5.1",
         "rollup": "^2.18.1",
         "rollup-plugin-copy": "^3.3.0",
