--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@rollup/plugin-json": "^5.0.0",
         "@rollup/plugin-node-resolve": "^15.0.0",
         "@rollup/plugin-url": "^8.0.0",
+        "@rollup/plugin-terser": "^0.1.0",
         "babel-eslint": "^10.0.3",
         "can-npm-publish": "^1.3.3",
         "chai": "^4.2.0",
@@ -42,7 +43,6 @@
         "rollup-plugin-license": "^3.0.0",
         "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-serve": "^2.0.0",
-        "rollup-plugin-terser": "^7.0.2",
         "selfsigned": "^2.0.0"
     },
     "dependencies": {
