Rename package to match new naming schema

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dbp-topics/educred",
+    "name": "@digital-blueprint/educred-app",
     "internalName": "dbp-educred",
     "version": "0.0.1",
     "license": "LGPL-2.1-or-later",
