--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "@webcomponents/scoped-custom-element-registry": "^0.0.6",
         "credential-handler-polyfill": "^2.1.0",
         "i18next": "^22.0.0",
-        "lit": "^2.1.0",
+        "lit": "^2.7.0 || ^3.0.0",
         "mockdate": "^3.0.5"
     },
     "scripts": {
