--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "@digital-blueprint/educred-app",
     "internalName": "dbp-educred",
     "version": "0.0.1",
+    "type": "module",
     "license": "LGPL-2.1-or-later",
     "repository": {
         "type": "git",
@@ -65,17 +66,17 @@
         "mockdate": "^3.0.5"
     },
     "scripts": {
-        "build": "rollup --bundleConfigAsCjs -c",
+        "build": "rollup -c",
         "i18next": "i18next",
         "format": "npm run format:eslint && npm run format:prettier",
         "format:eslint": "eslint \"**/*.{js,ts}\" --fix",
         "format:prettier": "prettier \"**/*.{js,json,ts}\" --write",
-        "watch": "rollup --bundleConfigAsCjs -c --watch",
+        "watch": "rollup -c --watch",
         "watch-local": "npm run watch",
         "watch-full": "rollup -c --watch --environment FORCE_FULL",
-        "watch-bs": "rollup --bundleConfigAsCjs -c --watch --environment APP_ENV:bs",
-        "test": "rollup --bundleConfigAsCjs -c --environment APP_ENV:test && karma start --singleRun",
-        "test-full": "rollup --bundleConfigAsCjs -c --environment FORCE_FULL,APP_ENV:test && karma start --singleRun",
+        "watch-bs": "rollup -c --watch --environment APP_ENV:bs",
+        "test": "rollup -c --environment APP_ENV:test && karma start karma.conf.cjs --singleRun",
+        "test-full": "rollup -c --environment FORCE_FULL,APP_ENV:test && karma start karma.conf.cjs --singleRun",
         "lint": "eslint .",
         "xxx-do-publish": "sed -i 's/\"private\": true/\"private\": false/' package.json && can-npm-publish --verbose 2>&1 && npm publish --access public 2>&1; sed -i 's/\"private\": false/\"private\": true/' package.json"
     }
